Add /tarots routes
